cli/hypercode-rs/tui2/src/bottom_pane/snapshots/hypercode_tui2__bottom_pane__chat_composer__tests__empty.snap
---
source: tui2/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Hypercode to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  100% context left · ? for shortcuts                                                               "
