cli/hypercode-rs/tui2/src/bottom_pane/snapshots/hypercode_tui2__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui2/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Hypercode to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                            ! for shell commands                                    "
"  shift + enter for newline                 tab to queue message                                    "
"  @ for file paths                          ctrl + v to paste images                                "
"  esc again to edit previous message        ctrl + c to exit                                        "
"                                            ctrl + t to view transcript                             "
